--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
 WEST required packages: 
-scanpy==1.9.6
-numpy==1.21.6
-scikit-learn==1.0.2
-scipy==1.10.1
+scanpy==1.10.3
+numpy==2.0.2
+scikit-learn==1.5.2
+scipy==1.14.1
 
 WEST tutorial required packages:
-numpy==1.21.6
-pandas==2.0.3
-anndata==0.7.6
-matplotlib==3.7.5
-umap-learn==0.5.3
-datatable==1.0.0
-scanpy==1.9.6
-scikit-learn==1.0.2
+numpy==2.0.2
+pandas==2.2.3
+anndata==0.10.9
+matplotlib==3.9.2
+umap-learn==0.5.6
+scanpy==1.10.3
+scikit-learn==1.5.2
+igraph==0.11.6
+leidenalg==0.10.2
