--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,9 @@ scanpy==1.10.3
 scikit-learn==1.5.2
 igraph==0.11.6
 leidenalg==0.10.2
+
+Simulation required packages:
+tidyverse==2.0.0
+MASS==7.3-60.0.1
+NBZIMM==1.0
+umap==0.2.10.0
